[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["MatsiukRoman <r.matsuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.32"
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
